# bayesian_statistical_methods

./: .gitignore  LICENSE  README.md  environment.yaml  jupyterhub_readme.ipynb  syllabus.md
course_tools/: make_pdf.sh  make_slides.sh  pyproject.toml
course_tools/nbconvert_templates/base/: mathjax.html.j2
course_tools/src/bayesian_stats_course_tools/: __init__.py  analyse.py  dark.mplstyle  light.mplstyle  misc.py  plotting.py  tex_defs.md
exercise_solutions/: birthday_problem_solution.ipynb  bootstrap_solution.ipynb  corr_coeff.ipynb  jovian_moons.ipynb  linear_fits.ipynb  metropolis_hastings.ipynb  monte_carlo_pi.ipynb  monty_hall_solution.ipynb  pearson_coeff_bootstrap_solution.ipynb  random_variables_solutions.ipynb
exercises/: intro_to_bayes_exercises.ipynb  probabilities_birthday_monty_hall.ipynb  probabilities_exercises.ipynb  random_variables_and_probability_functions_exercises.ipynb  sampling_1_exercises.ipynb  sampling_2_exercises.ipynb
lectures/: estimators_and_data_exploration.ipynb  evidence.ipynb  fisher_hmc_and_jax.ipynb  intro.ipynb  intro_to_bayes.ipynb  model_checking.ipynb  probabilities.ipynb  random_variables_and_probability_distributions.ipynb  recap.ipynb  rej_sampling.ipynb  simulation_based_inference.ipynb
lessons/: estimators_and_data_exploration.ipynb  fisher_hmc_and_jax.ipynb  gaussian_processes.ipynb  intro.ipynb  intro_to_bayes.ipynb  linear_fits.ipynb  model_checking.ipynb  probabilities.ipynb  probalistic_programming.ipynb  recap.ipynb  simulation_based_inference.ipynb
slides/: estimators_and_data_exploration.slides.html  (+8 more)
(+11 files in other folders)
